--- a/Links/about-my/resume/index.html
+++ b/Links/about-my/resume/index.html
@@ -154,9 +154,7 @@
                                     jQuery).</li>
                             </ul>
                             <div class="word-wrap">
-                                <h6>You can enter the site by clicking on the <a href="../../../index.html">projects</a>
-                                    or
-                                    vizit <a href="">www.allaboutmy.com</a></h6>
+                                <h6>You can see all my projects<a href="../../../index.html">here</a>
                             </div>
                         </div>
 
