--- a/Links/about-my/resume/index.html
+++ b/Links/about-my/resume/index.html
@@ -94,7 +94,7 @@
                         </div>
                         <hr>
                         <div class="summary-section padding-sides">
-                            <p>Despite having no experience in the IT field, within only 6 months I managed to learn
+                            <p>Despite having no experience in the Web Development field, within only 6 months I managed to learn
                                 HTML, CSS, JavaScript, PHP, Python, UI Web Disign, Hyper, API and some of their
                                 frameworks on my own. Of course, it was quite
                                 difficult without any help from another person. However, I believe I overcame all the
