--- a/Links/Mini-Projects/Drum-Kit/index.html
+++ b/Links/Mini-Projects/Drum-Kit/index.html
@@ -51,7 +51,7 @@
                 <a class="nav-link" href="../../../index.html#main">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../../../index.html#about-my-country">My country</a>
+                <a class="nav-link" href="../../../index.html#about-my-country">Kyrgyzstan</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="../../../index.html#card-section">Culture</a>
