--- a/Links/about-my/resume/index.html
+++ b/Links/about-my/resume/index.html
@@ -95,7 +95,7 @@
                         <hr>
                         <div class="summary-section padding-sides">
                             <p>Despite having no experience in the Web Development field, within only 6 months I managed to learn
-                                HTML, CSS, JavaScript, PHP, Python, UI Web Disign, Hyper, API and some of their
+                                HTML, CSS, JavaScript, PHP, Python, UI Web Design, Hyper, API and some of their
                                 frameworks on my own. Of course, it was quite
                                 difficult without any help from another person. However, I believe I overcame all the
                                 difficulties because I was passionate about this field. I created my first <b>Responsive
