--- a/Links/about-my/resume/index.html
+++ b/Links/about-my/resume/index.html
@@ -126,7 +126,7 @@
                                     <ul>
                                         <li>PHP</li>
                                         <li>Python</li>
-                                        <li>Web Design UI</li>
+                                        <li>UI Web Design</li>
                                         <li>Hyper</li>
                                         <li>API</li>
                                     </ul>
@@ -283,7 +283,7 @@
                                 aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                         <br>
-                        <p class="mb-0 description ps-2">Web Design UI</p>
+                        <p class="mb-0 description ps-2">UI Web Design</p>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" style="width: 95%" aria-valuenow="75"
                                 aria-valuemin="0" aria-valuemax="100"></div>
