--- a/Links/about-my/resume/index.html
+++ b/Links/about-my/resume/index.html
@@ -223,7 +223,7 @@
                             <div class="word-wrap">
                                 <a
                                     href="https://login.microsoftonline.com/common/oauth2/authorize?client_id=00000002-0000-0ff1-ce00-000000000000&redirect_uri=https%3a%2f%2foutlook.office.com%2fowa%2f&resource=00000002-0000-0ff1-ce00-000000000000&response_mode=form_post&response_type=code+id_token&scope=openid&msafed=1&msaredir=1&client-request-id=ae6383e5-8cdf-619e-8911-b112c75a4c2e&protectedtoken=true&claims=%7b%22id_token%22%3a%7b%22xms_cc%22%3a%7b%22values%22%3a%5b%22CP1%22%5d%7d%7d%7d&nonce=637686150194366827.6c913fdb-1c7e-4313-afec-694c3ab6621e&state=DcuxDoIwFEDRov_iVulr4bUdiIPGMOCCJhq2tpQEIsGUBuPf2-Hc7WaEkH2ySzKWQiQKiQqhZKALgai4PKLTIIbeUnDS00KAoGbwjqIunDAWkYPP0nvJl6_JT2s00VdwCL4fg3fxsVSmbpmrb9j89Na_2tVyHZpZz938nrp7OVnONvu8fuxZ_QE&sso_reload=true">
-                                    <p>aitmatov.82@gmail.com</p>
+                                    <p>nazudnc.82@gmail.com</p>
                                 </a>
                             </div>
                             <h6 class="fw-bold">Skills:</h6>
