--- a/Links/about-my/resume/index.html
+++ b/Links/about-my/resume/index.html
@@ -314,9 +314,9 @@
 
                         <h6 class="fw-bold ps-2">Languages:</h6>
                         <hr>
-                        <p class="mb-0 description ps-2"><b>English</b> - fluently</p>
+                        <p class="mb-0 description ps-2"><b>English</b> - proficient</p>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="75"
+                            <div class="progress-bar" role="progressbar" style="width: 93%" aria-valuenow="75"
                                 aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                         <br>
