--- a/Links/about-my/resume/index.html
+++ b/Links/about-my/resume/index.html
@@ -166,8 +166,7 @@
                         <hr>      
                        <div class="Work-Experience-section padding-sides">
                             <div>
-                               <h5 class="fw-bold">Front End Developer: (2021.01 – 2021.10 (Full time)) – 
-                                   RTech mobile application Inc. (Toronto, Canada).</h5>  
+                               <h6 class="fw-bold">Front End Developer: (2021.01 – 2021.10 (Full time)) – RTech mobile application Inc. (Toronto, Canada).</h6>  
                            </div>    
                        </div>
          
