--- a/Links/about-my/resume/index.html
+++ b/Links/about-my/resume/index.html
@@ -94,14 +94,14 @@
                         </div>
                         <hr>
                         <div class="summary-section padding-sides">
-                            <p>Despite having no experience in the Web Development field, within only 6 months I managed to learn
-                                HTML, CSS, JavaScript, PHP, Python, UI Web Design, Hyper, API and some of their
-                                frameworks on my own. Of course, it was quite
-                                difficult without any help from another person. However, I believe I overcame all the
+                            <p>Despite having no experience in the Web Development field, within only 6 months I managed to learn HTML, 
+                                CSS, JavaScript, PHP, Python, UI Web Design, Hyper, API and some of their frameworks on my own. Of course, 
+                                it was quite difficult without any help from another person. However, I believe I overcame all the 
                                 difficulties because I was passionate about this field. I created my first <b>Responsive
-                                    Website</b> and
-                                several mini projects as an initial step, and I'm looking for a role where I can grow
-                                and learn more from other experienced team members.</p>
+                                    Website</b> and several mini projects as an initial step. Then I found my first job at the 
+                                company “RTech mobile application Inc.” in Toronto, Canada. There I successfully worked as a 
+                                Front End Developer (2021.01 - 2021.10 (Full time)). Now, I'm looking for a permanently role where 
+                                I can grow and learn from other experienced team members.</p>
                         </div>
 
 <!------------------------------------------Experience Section-------------------------------------------->
