--- a/Links/about-my/resume/index.html
+++ b/Links/about-my/resume/index.html
@@ -100,7 +100,7 @@
                                 difficulties because I was passionate about this field. I created my first <b>Responsive
                                     Website</b> and several mini projects as an initial step. Then I found my first job at the 
                                 company “RTech mobile application Inc.” in Toronto, Canada. There I successfully worked as a 
-                                Front End Developer (2021.01 - 2021.10 (Full time)). Now, I'm looking for a permanently role where 
+                                Front End Developer (2021.01 - 2021.10 (Full time)). Now, I'm looking for a permanent role where 
                                 I can grow and learn from other experienced team members.</p>
                         </div>
 
