--- a/Links/about-my/resume/index.html
+++ b/Links/about-my/resume/index.html
@@ -99,7 +99,7 @@
                                 it was quite difficult without any help from another person. However, I believe I overcame all the 
                                 difficulties because I was passionate about this field. I created my first <b>Responsive
                                     Website</b> and several mini projects as an initial step. Then I found my first job at the 
-                                company “RTech mobile application Inc.” in Toronto, Canada. There I successfully worked as a 
+                                company <b>RTech mobile application Inc.</b> in Toronto, Canada. There I successfully worked as a 
                                 Front End Developer (2021.01 - 2021.10 (Full time)). Now, I'm looking for a permanent role where 
                                 I can grow and learn from other experienced team members.</p>
                         </div>
