--- a/Links/about-my/resume/index.html
+++ b/Links/about-my/resume/index.html
@@ -143,15 +143,16 @@
                         <div class="projects-section padding-sides">
                             <h6 class="fw-bold">Projects I have created by using the (hyper) languages I learned:</h6>
                             <ul>
-                                <li>A personal website is called <b>"all about me"</b> designed by me. (Created by using
-                                    HTML CSS and JavaScript jQuery Bootstrap).</li>
-                                <li>A game called <b>"Dice Game"</b>, which is played with a random number. (Created by
-                                    using HTML CSS and JavaScript).</li>
-                                <li><b>"Drum Kit"</b> is a musical instrument played with mouse and keyboard. (Created
-                                    by using HTML CSS and JavaScript).
+                                <li>A personal website is called <b>"all about me"</b> designed by me. 
+                                    (Created by using HTML, CSS, JavaScript, jQuery, and Bootstrap).</li>
+                                <li>A game called <b>"Dice Game"</b>, which is played with a random number. 
+                                    (Created by using HTML, CSS, and JavaScript).</li>
+                                <li><b>"Drum Kit"</b> is a musical instrument played with mouse and keyboard. 
+                                    (Created by using HTML, CSS, and JavaScript).
                                 </li>
-                                <li>The last one is <b>"Weather-App"</b>. (Created by using HTML CSS JavaScript and
-                                    jQuery).</li>
+                                <li><b>"Countdown App"</b>. This app calculates and displays the time remaining until the New Year 2022. 
+                                    (For this app used HTML, CSS, JavaScript, jQuery, and Bootstrap).</li>
+                                <li>The last one is <b>"Weather-App"</b>. (Created by using HTML, CSS, JavaScript, and jQuery).</li>
                             </ul>
                             <div class="word-wrap">
                                 <h6>You can see all my projects <a href="../../../index.html">here</a>
